Revision history for VMware::API::LabManager

1.11  DATETAG

  Corrected:
    Call of Data::Dumper without instancing the module.

1.10  2010/09/17

  Added:
    Example configuration to POD.

  Corrected:
    Quoting error in unknown parameter warning for config()

  Improved:
    Minor POD cleanups.
    Added 'Crypt::SSLeay' as a prerequisite. (Used by SOAP::Lite for HTTPS)

1.9  2010/09/17

  Added example script:
    list-configurations.pl

  Corrected:
    Syntax error on all example scripts.

  Improved:
    Command line parameter checks added to all example scripts.
    Accidental UTF characters (curly quotes) removed from POD.
    UserPerformAction() added to WISH LIST section of POD.
    Trailing spaces removed from all lines.
    Minor POD cleanups.

1.8  2010/09/13
  
  Added test:
    02-header.t - SOAP connection header tests
  
  Improved:
    GetMachineByName() - Clenaed up perl syntax.
    GetSingleConfigurationByName() - Corrected error in fault handling.
    LiveLink() - Clenaed up perl syntax.

  POD cleanup:
    Moved API method names from a head 2 level to smaller to reduce outline.
    Moved POD past __END__ token as per Perl best practices.
    Added section for returned values.
    Added section for example scripts.

  Added example scripts:
    conditions.pl
    delete-all.pl
    hwupgrade.pl
    list-machines.pl
    list-networks.pl
    list-organization.pl
    list-templates.pl
    list-users.pl
    list-workspaces.pl
    move.pl
  
1.7  2010/09/01

  Added "WISH LIST" to the POD.

  Added:
    GetConfigurationByName()
    priv_ConfigurationGetNetworks()
    priv_ListNetworks()
    priv_ListTransportNetworksInCurrentOrg()
    priv_NetworkInterfaceModify()
    
  Improved:
    priv_ConfigurationMove() - Proper handling of optional parameters and empty VMid array condition.
    priv_GetNetworkInfo() - Set to return an array result like the List*() methods.

1.6  2010/08/23

  Removed errant unicode emdashes from the POD.

  Added: