@@ -1,4 +1,4 @@
-#!/usr/bin/perl
+#!/usr/bin/perl -I../lib
 
 =head1 list-machines.pl
 
@@ -23,7 +23,7 @@ use Getopt::Long;
 use VMware::API::LabManager;
 use strict;
 
-my $version = ( split ' ', '$Revision: 2.0 $' )[1];
+my $version = ( split ' ', '$Revision: 2.1 $' )[1];
 
 my ( $username, $password, $server);
 my $orgname   = 'Global';
